--- a/admin/src/main/resources/templates/brand/brand.html
+++ b/admin/src/main/resources/templates/brand/brand.html
@@ -23,7 +23,7 @@
                 </td>
                 <td>{{item.state|activeFilter}}</td>
                 <td>
-                    <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
+                    <button type="button" class="btn btn-default btn-primary btn-sm" ng-click="delete(item)">
                         {{item.state|reverseActiveFilter}}
                     </button>
                     <button type="button" class="btn btn-primary btn-sm" ng-click="view(item)">
