--- a/admin/src/main/resources/templates/authority/authority.html
+++ b/admin/src/main/resources/templates/authority/authority.html
@@ -33,7 +33,7 @@
                         <button type="button" class="btn btn-primary btn-sm" ng-click="edit(item)">
                             修改
                         </button>
-                        <button type="button" class="btn btn-primary btn-sm" ng-click="delete(item)">
+                        <button type="button" class="btn btn-default btn-primary btn-sm" ng-click="delete(item)">
                             {{item.state|reverseActiveFilter}}
                         </button>
                     </td>
