--- a/admin/src/main/resources/templates/category/categoryEdit.html
+++ b/admin/src/main/resources/templates/category/categoryEdit.html
@@ -4,14 +4,14 @@
 	</alert>
 	<form class="form-horizontal" ng-submit="submit()">
 		<div class="form-group">
-			<label class="col-sm-3 control-label">商品分类分类</label>
+			<label class="col-sm-3 control-label">一级分类</label>
 			<div class="col-sm-5">
 				<select name="category" ng-model="item.parent" ng-options="c.id as c.name for c in categories" ng-required="true">
 				</select>
 			</div>
 		</div>
 		<div class="form-group">
-			<label class="col-sm-3 control-label">商品名称</label>
+			<label class="col-sm-3 control-label">二级分类</label>
 			<div class="col-sm-5">
 				<input type="text" class="form-control" ng-model="item.name" ng-required="true"/>
 			</div>
