--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -1,95 +1,103 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		</meta>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-		</meta>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		</meta>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		</meta>
-		<title>
-			优捷后台管理系统
-		</title>
-		<link href="/css/style.default.css" rel="stylesheet">
-		</link>
-		<!--jquery-->
-		<script src="/js/jquery-1.11.2.min.js"></script>
-		<!--bootstrap-->
-		<script src="/js/bootstrap.min.js"></script>
-		<!--ckeditor-->
-		<script src="/js/ckeditor/ckeditor.js"></script>
-		<script src="/js/ckeditor/adapters/jquery.js"></script>
-		<!--module-->
-		<script src="/js/angular/angular.js"></script>
-		<script src="/js/angular/angular-ui-router.js"></script>
-		<script src="/js/angular/ui-router-tabs.js"></script>
-		<script src="/js/angular/ui-bootstrap-tpls-0.13.0.js"></script>
-		<script src="/js/module/app.js"></script>
-		<script src="/js/module/user.js"></script>
-		<script src="/js/module/brand.js"></script>
-		<script src="/js/module/advertise.js"></script>
-		<script src="/js/module/info.js"></script>
-		<script src="/js/module/subject.js"></script>
-		<script src="/js/module/product.js"></script>
-		<script src="/js/module/productCategory.js"></script>
-		<script src="/js/module/solution.js"></script>
-		<script src="/js/module/category.js"></script>
-		<script src="/js/module/scrollImage.js"></script>
-		<script src="/js/module/subjectCategory.js"></script>
-		<script src="/js/module/admin.js"></script>
-		<script src="/js/module/role.js"></script>
-		<script src="/js/module/menu.js"></script>
-		<script src="/js/module/password.js"></script>
-		<!--custom directive-->
-		<script src="/js/module/uploadDirective.js"></script>
-		<script src="/js/module/ckEditorDirective.js"></script>
-		<script src="/js/module/filter.js"></script>
-	</head>
 
-	<body ng-app="app">
-		<header>
-			<div class="headerwrapper">
-				<div class="header-left">
-					优捷后台管理系统
-				</div>
-				<div class="header-right">
-					<a>admin</a>
-					<button class="btn btn-default btn-xs">
-						退出
-					</button>
-				</div>
-			</div>
-			<!-- headerwrapper -->
-		</header>
-		<section>
-			<div class="mainwrapper">
-				<div class="leftpanel">
-					<ul class="nav nav-pills nav-stacked" id="child_nav" style="margin-top:10px">
-						<li th:each="menu:${menus}">
-							<a th:text="${menu.name}" th:attr="ui-sref=${menu.href}"></a>
-						</li>
-					</ul>
-				</div>
-				<!-- leftpanel -->
-				<div class="mainpanel">
-					<ui-view></ui-view>
-				</div>
-				<!-- mainpanel -->
-			</div>
-			<!-- mainwrapper -->
-		</section>
-		<footer>
-			<div class="footerwrapper">
-				© 1998 - 2015 SJ Inc. All Rights Reserved版权所有
-			</div>
-		</footer>
-		<script>
-		$('.nav li').eq(0).addClass('active');
-		$('.nav li').click(function(){
-			$(this).addClass('active').siblings().removeClass('active');
-		});
-		</script>
-	</body>
+<head>
+    <meta charset="utf-8">
+    </meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    </meta>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    </meta>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    </meta>
+    <title> 优捷后台管理系统 </title>
+    <link href="/css/style.default.css" rel="stylesheet">
+    </link>
+    <!--jquery-->
+    <script src="/js/jquery-1.11.2.min.js"></script>
+    <!--bootstrap-->
+    <script src="/js/bootstrap.min.js"></script>
+    <!--ckeditor-->
+    <script src="/js/ckeditor/ckeditor.js"></script>
+    <script src="/js/ckeditor/adapters/jquery.js"></script>
+    <!--module-->
+    <script src="/js/angular/angular.js"></script>
+    <script src="/js/angular/angular-ui-router.js"></script>
+    <script src="/js/angular/ui-router-tabs.js"></script>
+    <script src="/js/angular/ui-bootstrap-tpls-0.13.0.js"></script>
+    <script src="/js/module/app.js"></script>
+    <script src="/js/module/user.js"></script>
+    <script src="/js/module/brand.js"></script>
+    <script src="/js/module/advertise.js"></script>
+    <script src="/js/module/info.js"></script>
+    <script src="/js/module/subject.js"></script>
+    <script src="/js/module/product.js"></script>
+    <script src="/js/module/productCategory.js"></script>
+    <script src="/js/module/solution.js"></script>
+    <script src="/js/module/category.js"></script>
+    <script src="/js/module/scrollImage.js"></script>
+    <script src="/js/module/subjectCategory.js"></script>
+    <script src="/js/module/admin.js"></script>
+    <script src="/js/module/role.js"></script>
+    <script src="/js/module/menu.js"></script>
+    <script src="/js/module/password.js"></script>
+    <!--custom directive-->
+    <script src="/js/module/uploadDirective.js"></script>
+    <script src="/js/module/ckEditorDirective.js"></script>
+    <script src="/js/module/filter.js"></script>
+</head>
+
+<body ng-app="app">
+    <header>
+        <div class="headerwrapper">
+            <div class="header-left">
+                优捷后台管理系统
+            </div>
+            <div class="header-right">
+                <a>admin</a>
+                <button class="btn btn-default btn-xs">
+                    退出
+                </button>
+            </div>
+        </div>
+        <!-- headerwrapper -->
+    </header>
+    <section>
+        <div class="mainwrapper">
+            <div class="leftpanel">
+                <ul class="nav nav-pills nav-stacked" id="child_nav" style="margin-top:10px">
+                    <li th:each="menu:${menus}">
+                        <a th:text="${menu.name}" th:attr="ui-sref=${menu.href}"></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- leftpanel -->
+            <div class="mainpanel">
+                <ui-view></ui-view>
+            </div>
+            <!-- mainpanel -->
+        </div>
+        <!-- mainwrapper -->
+    </section>
+    <footer>
+        <div class="footerwrapper">
+            © 1998 - 2015 SJ Inc. All Rights Reserved版权所有
+        </div>
+    </footer>
+    <script>
+    $(function() {
+        var hash = window.location.hash;
+        $('.nav li a')
+            .filter(function(n, d) {
+                return $(d).attr('href') == hash;
+            })
+            .parent('li')
+            .addClass('active');
+        $('.nav li').click(function() {
+            $(this).addClass('active').siblings().removeClass('active');
+        });
+    });
+    </script>
+</body>
+
 </html>
