--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -113,8 +113,8 @@
 	</div>
 <div th:include="footer/footer"></div>
 	<div class="fixed"></div>
+	<div class="deletePrompt"></div>
 	<div class="hide-wrap temp-wrap bodr">
-		<span class="cancel">关闭</span>
 		<h3 class="temp-h">请选择生成的采购模板</h3>
 		<div class="temp">
 			<span><input type="radio" name="radio" />模板1</span>
