--- a/web/src/main/resources/templates/user/forgetPw.html
+++ b/web/src/main/resources/templates/user/forgetPw.html
@@ -17,6 +17,40 @@
 			$(document).ajaxSend(function(e, xhr, options) {
 				xhr.setRequestHeader(header, token);
 			});
+			$(".tel-code").click(function(){
+				var code = $(this);
+				var phone = $("#phone");
+				$("#phoneError").empty();
+				if(phone.val()=="" || phone.val().length!=11){
+					phone.after('<i class="error" id="phoneError">请确认手机号码</i>');
+					return;
+				}
+				$.ajax({
+					type : 'POST',
+					url : '/forgetPws/phone',
+					data : {'phone':phone.val()},
+					success : function(data){
+						if(data=='noexists')
+							phone.after('<i class="error" id="phoneError">该手机未被注册</i>');
+						else if(data=='success'){
+	    					code.attr("disabled","disabled");
+	    					code.html("60秒后重发");
+	    					var time = 59;
+	    					var timer = setInterval(function(){
+	    						code.html(time + "秒后重发");
+	    						time--; 
+	    						if(time == -1){
+	    							clearInterval(timer);
+	    							code.removeAttr("disabled");
+	    							code.html("获取验证码");
+	    						}
+	    					},1000);
+
+	    				}else
+	    					phone.after('<i class="error" id="phoneError">请确认您的手机号码或您的次数已达上限</i>');
+					}
+				});
+			});
 		});
 	</script>
 </head>
@@ -65,9 +99,9 @@
 			<div class="form-group">
 				<div class="fl">
 				<label>验证码</label>
-				<input type="text" th:field="*{code}" class="w115"/>
-				<button class="tel-code">获取验证码</button>
-				<i class="error"></i>
+				<input type="text" th:field="*{captcha}" class="w115"/>
+				<button class="tel-code" type="button">获取验证码</button>
+				<i class="error" th:if="${#fields.hasErrors('captcha')}" th:errors="*{captcha}"></i>
 				</div>
 			</div>
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
