--- a/web/src/main/resources/templates/user/provider/signup.html
+++ b/web/src/main/resources/templates/user/provider/signup.html
@@ -46,7 +46,41 @@
             progressall: function(e, data) {
             }
         });
+        $(".tel-code").click(function(){
+    		var code = $(this);
+    		var phone = $("#phone");
+    		$("#phoneError").empty();
+    		if(phone.val()=="" || phone.val().length!=11){
+    			phone.after('<i class="error" id="phoneError">请确认手机号码</i>');
+    			return;
+    		}
+    		$.ajax({
+    			type : 'POST',
+    			url : '/providers/phone',
+    			data : {'phone':phone.val()},
+    			success : function(data){
+    				if(data=='exists')
+    					phone.after('<i class="error" id="phoneError">该手机已被注册</i>');
+    				else if(data=='success'){
+    					code.attr("disabled","disabled");
+    					code.html("60秒后重发");
+    					var time = 59;
+    					var timer = setInterval(function(){
+    						code.html(time + "秒后重发");
+    						time--; 
+    						if(time == -1){
+    							clearInterval(timer);
+    							code.removeAttr("disabled");
+    							code.html("获取验证码");
+    						}
+    					},1000);
 
+    				}
+    				else
+    					phone.after('<i class="error" id="phoneError">请确认您的手机号码或您的次数已达上限</i>');
+    			}
+    		});
+    	});
     });
     </script>
 </head>
@@ -105,8 +139,9 @@
             </div>
             <div class="form-group">
                 <label><i>*</i>验证码</label>
-                <input type="text" class="w115" />                
-                <button class="tel-code">获取验证码</button>
+                <input type="text" th:field="*{captcha}" class="w115"/>
+				<button class="tel-code" type="button">获取验证码</button>
+				<i class="error" th:if="${#fields.hasErrors('captcha')}" th:errors="*{captcha}">必填</i>
             </div>
             <div class="form-group">
                 <label><i>*</i>邮箱</label>
