--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -113,7 +113,15 @@
 	</div>
 <div th:include="footer/footer"></div>
 	<div class="fixed"></div>
-	<div class="deletePrompt"></div>
+	<div class="hide-wrap deletePrompt bodr">
+		<div class="hide-con">
+			<h2>是否从购物车中删除该商品</h2>
+			<div class="foot-btn">
+				<button class="btn green ft14" id="delete">确认</button>
+				<button class="btn default cancel" >取消</button>
+			</div>
+		</div>
+	</div>
 	<div class="hide-wrap temp-wrap bodr">
 		<h3 class="temp-h">请选择生成的采购模板</h3>
 		<div class="temp">
