--- a/web/src/main/resources/templates/user/provider/modifyProduct.html
+++ b/web/src/main/resources/templates/user/provider/modifyProduct.html
@@ -207,8 +207,12 @@
 						</div>	
 						<div class="point">
 							<div class="red">[重要提示]</div>
-							<p>1. 为了规范申捷电商平台信息发布，产品修改后需要重新通过审核，我们会在2-4小时内进行一次审核工作，网络繁忙时1个工作日内审核。</p>
-							<p>2. 产品名称中只能包含一种产品，不得把产品系列当作单条产品发布；可加入型号，但不允许加入其它任何如联系方式、价格或“进口”“国产”“现货”等,或和产品名称无关的符号。否则，我们有权更改或删除。</p>
+							<p>1.
+								为了规范申捷电商平台信息发布，产品修改后需要重新通过审核，我们会在<i class="red">2-4小时内</i>进行一次审核工作，网络繁忙时<i class="red">1个工作日</i>内审核。</p>
+							<p>2.
+								产品名称中只能包含一种产品，不得把产品系列当作单条产品发布；可加入型号，但不允许加入其它任何如联系方式、价格或“进口”“国产”“现货”等,或和产品名称无关的符号。否则，我们有权更改或删除。</p>
+							<p>3.
+								只能上传<i class="red">1M</i>一下的图片，富文本框中图片最佳效果为宽度<i class="red">890px</i>，可通过图片属性中宽度、高度、间距和对齐方式对图片或文字进行排版</p>
 						</div>
 						<div class="center">
 							<button class="btn green">保存</button>	
