--- a/web/src/main/resources/templates/user/common/buys.html
+++ b/web/src/main/resources/templates/user/common/buys.html
@@ -79,7 +79,7 @@
 							<tr th:each="buy,buyStat:${pages.getContent()}" th:id="'tr'+${buy.id}">
 								<td th:text="${buyStat.index+1}"></td>
 								<td th:text="${#dates.format(buy.createTime, 'yyyy-MM-dd')}"></td>
-								<td class="show-wrap" th:attr="product-id=${buy.id}">
+								<td th:attr="product-id=${buy.id}">
 									<a th:text="${buy.name}" th:href="'/user/buyRecords/'+${buy.id}">
 									</a>
 								</td>
