--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -119,6 +119,20 @@
 				promptError('数量最多为999');
 			}
 		});
+		$("#review").click(function(){
+			var productId = $(this).attr("data-id");
+			var reviews = $("#reviews"); 
+			if(reviews.html()==""){
+				$.ajax({
+					url : "/products/"+productId+"/reviews",
+					type : "get",
+					success : function(data){
+						reviews.empty();
+						reviews.append(data);
+					}
+				});
+			}
+		});
 	});
 </script>
 </head>
@@ -149,7 +163,7 @@
 				</div>
 				<div class="panel panel-price">
 					<label>价格：</label><span>
-					<b class="ft22 red" th:text="${product.price}">￥1500</b></span>
+					<b class="ft22 red">￥</b><b class="ft22 red" th:text="${product.price}">1500</b></span>
 				</div>
 				<div class="panel">
 					<label>类型</label><span th:text="${product.thirdCategory.name}">芯片扫描仪</span>
@@ -190,7 +204,7 @@
 		</div>
 		<div class="layout">
 			<div class="tabs-nav detail-nav bodr">
-				<a class="active">商品详情</a><a>相关解决方案</a><a>评论(<i th:text="${reviewPage.getTotalElements()}" id="reviewNum"></i>)
+				<a class="active">商品详情</a><a>相关解决方案</a><a id="review" th:attr="data-id=__${product.id}__">评论(<i th:text="${reviewCount}" id="reviewNum"></i>)
 				</a>
 			</div>
 			<div class="tab-conts detail-con bodr">
@@ -211,7 +225,6 @@
 				</div>
 				<div class="tab-panel global-box comments hide">
 					<div class="area-box">
-						<div id="reviews"></div>
 						<div class="info-area bodr clearfix">
 							<div class="info fl">
 								<img th:src="@{/img/member.png}" width="60" height="60" />
@@ -224,49 +237,7 @@
 							</form>
 						</div>
 					</div>
-					<div class="comment-list">
-						<ul id="reviewUl">
-							<li th:each="review:${reviewPage.getContent()}">
-								<div class="member-info fl">
-									<img th:src="@{/img/member.png}" width="60" height="60" />
-								</div>
-								<div class="member-global fr">
-									<div class="member-msg clearfix"
-										th:with="date=${nowTime-review.createdTime.getTime().getTime()}">
-										<span class="me-name fl" th:text="${review.createdBy.name}"></span>
-										<span class="evt-time fr"><i
-											th:if="${date/(1000*60) lt 1 }" th:text="${date/(1000)}+'秒前'"></i></span>
-										<span class="evt-time fr"><i
-											th:if="${1 lt (date/(1000*60)) and (date/(1000*60)) lt 60 }"
-											th:text="${date/(1000*60)}+'分钟前'"></i></span> <span
-											class="evt-time fr"><i
-											th:if="${1 lt (date/(1000*3600)) and (date/(1000*3600)) lt 24}"
-											th:text="${(date/(1000*3600))}+'小时前'"></i></span> <span
-											class="evt-time fr"><i
-											th:if="${24 lt (date/(1000*3600)) and (date/(1000*3600*24))==1}"
-											th:text="昨天"></i></span> <span class="evt-time fr"><i
-											th:if="${1 lt (date/(1000*3600*24)) and (date/(1000*3600*24)) lt 10}"
-											th:text="${(date/(1000*3600*24))}+'天前'"></i></span> <span
-											class="evt-time fr"><i
-											th:if="${10 lt (date/(1000*3600*24))}"
-											th:text="${#dates.format(review.createdTime, 'yyyy-MM-dd')}"></i></span>
-									</div>
-									<div class="msg">
-										<p th:text="${review.content}"></p>
-									</div>
-								</div>
-							</li>
-						</ul>
-					</div>
-					<div class="pagination">
-						<div class="l-pagination">
-						<ul>
-							<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}" th:class="${i==viewpage.current}?active" >
-								<a th:href="@{${viewpage.href}(page=${i},size=10,__${viewpage.option}__)}" th:text="${i}"></a>
-							</li>
-						</ul>
-						</div>
-					</div>
+					<div id="reviews"></div>
 				</div>
 			</div>
 		</div>
