--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -223,7 +223,9 @@
 							</span>
 							<i class="error" style="top: 64%;left: 14.5%;" th:if="${#fields.hasErrors('coverImg')}" th:errors="*{coverImg}"></i>
 						</div>
-						<div class="form-group clearfix" style="height: 400px;">
+						<div class="form-group clearfix" style="height: 400px;">		
+						<p>3.
+								只能上传<i class="red">1M</i>一下的图片，富文本框中图片最佳效果为宽度<i class="red">890px</i>，可通过图片属性中宽度、高度、间距和对齐方式对图片或文字进行排版</p>
 							<label class="fl">产品介绍</label>
 							<div class="fl edit w630" style="height: 400px;">
 								<textarea id="content" th:field="*{content.content}"></textarea>
