--- a/web/src/main/resources/templates/user/provider/count.html
+++ b/web/src/main/resources/templates/user/provider/count.html
@@ -48,8 +48,8 @@
 						<div class="pagination">
 							<div class="l-pagination">
 								<ul>
-									<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}" th:class="${i==viewpage.current}?active" >
-										<a th:href="@{${viewpage.href}(page=${i},size=15)}" th:text="${i}"></a>
+									<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}" th:class="${i-1==viewpage.current}?active" >
+										<a th:href="@{${viewpage.href}(page=${i-1})}" th:text="${i}"></a>
 									</li>
 								</ul>
 							</div>
