修改全局样式

--- a/web/src/main/resources/templates/information/information.html
+++ b/web/src/main/resources/templates/information/information.html
@@ -25,7 +25,7 @@
 <body>
 	<div th:include="head/head">Head</div>
 	<!-- header -->
-	<div class="wrapper">
+	<div class="wrapper h400">
 		<div class="crumb news-crumb">
 			<a href="/">首页</a>
 			<i>></i>
