--- a/web/src/main/resources/templates/search/brand/brands.html
+++ b/web/src/main/resources/templates/search/brand/brands.html
@@ -25,7 +25,7 @@
 <body>
 	<div id="includeHeader" class="header" th:include="head/head">Head</div>
 	<!-- header -->
-		<div class="wrapper">
+		<div class="wrapper h400">
 			<div class="filter">
 				<span>查找结果共<i th:text="${page.totalElements}">1222</i>个品牌</span>
 			</div>
