--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1080,6 +1080,9 @@ a.minus:hover, a.plus:hover {
 .h300{
 	min-height:300px;
 }
+.h400{
+	min-height:400px;
+}
 .pro-list li a{
 	color:#868fa7;
 }
