--- a/web/src/main/resources/templates/user/provider/changePassword.html
+++ b/web/src/main/resources/templates/user/provider/changePassword.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<div class="header" th:include="head/head">Head</div>
-	<div class="wrapper">
+	<div class="wrapper h400">
 		<div class="self-wrap">
 			<div class="gray-hd">
 				<a class="blue">个人中心</a>
