--- a/web/src/main/resources/templates/user/provider/maintain.html
+++ b/web/src/main/resources/templates/user/provider/maintain.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="header" th:include="head/head">Head</div>
 	<!-- header -->
-	<div class="wrapper">
+	<div class="wrapper h400">
 		<div class="self-wrap">
 			<div class="gray-hd"><a class="blue">个人中心</a></div>
 			<div class="mainwrapper clearfix">
