修改普通用户个人中心错误

--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -72,7 +72,7 @@
 									<div class="fl" style="width: 355px;">
 										<label><i>*</i>性别</label>
 										<input type="radio" th:field="*{sex}" value="MALE"/>男
-										<input type="radio" th:field="*{sex}" value="FEMALEs"/>女
+										<input type="radio" th:field="*{sex}" value="FEMALE"/>女
 										<i class="error" th:if="${#fields.hasErrors('sex')}" th:errors="*{sex}">必填</i>
 									</div>
 									<div class="fl">
