--- a/web/src/main/resources/templates/user/changePw-result.html
+++ b/web/src/main/resources/templates/user/changePw-result.html
@@ -15,13 +15,13 @@
 			<div class="nav-box">
 				<a href="/">首页</a>
 				<i>|</i>
-				<a href="/productCategory/仪器">仪器</a>
+				<a href="/productCategory/1">仪器</a>
 				<i>|</i>
-				<a href="/productCategory/试剂">试剂</a>
+				<a href="/productCategory/2">试剂</a>
 				<i>|</i>
-				<a href="/productCategory/耗材">耗材</a>
+				<a href="/productCategory/3">耗材</a>
 				<i>|</i>
-				<a href="/productCategory/服务">服务</a>
+				<a href="/productCategory/4">服务</a>
 				<i>|</i>
 				<a href="/subjects">解决方案</a>
 			</div>
