--- a/web/src/main/resources/templates/user/common/collection.html
+++ b/web/src/main/resources/templates/user/common/collection.html
@@ -75,9 +75,9 @@
 						<a href="/user/buyRecords">采购申请</a>
 					</div>
 					<div class="mainpanel bodr collect fr" >
-						<div class="items-list" th:if="${pages.getContent()!=null and pages.getContent().size()!=0}">
+						<div class="items-list" th:if="${pages!=null and pages.size()!=0}">
 							<ul id="preferUl">
-								<li class="bodr" th:each="prefer:${pages.getContent()}" th:id="'li'+${prefer.product.id}">
+								<li class="bodr" th:each="prefer:${pages}" th:id="'li'+${prefer.product.id}">
 									<a th:href="@{'/products/'+${prefer.product.id}}" target="_blank"><img th:src="@{${prefer.product.coverImg}}" width="210" height="175"/>
 									<div class="pic-box">
 										<div class="pic-row refer">
@@ -109,16 +109,7 @@
 								</li>
 							</ul>
 						</div>
-					<div class="pagination">
-						<div class="l-pagination">
-							<ul>
-								<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}" th:class="${(i-1)==viewpage.current}?active">
-									<a th:href="@{${viewpage.href}(page=${i-1})}" th:text="${i}"></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div id="noCollection" th:class="${pages.getContent()==null || pages.getContent().size()==0}?userShow:userHide">
+					<div id="noCollection" th:class="${pages==null || pages.size()==0}?userShow:userHide">
 						<div  class="tip-box mainpanel collect fr" style="line-height: 300px;">
 							<span>您还没有收藏任何商品，赶紧收藏吧！</span>
 						</div>
