修改全局样式

--- a/web/src/main/resources/templates/user/provider/release.html
+++ b/web/src/main/resources/templates/user/provider/release.html
@@ -227,7 +227,7 @@
 							
 							<label class="fl">产品介绍</label>
 							<p style="margin-left:165px; width:635px;margin-bottom:10px;line-height:20px;">
-							只能上传<i class="red">1M</i>一下的图片，富文本框中图片最佳效果为宽度<i class="red">890px</i>，可通过图片属性中宽度、高度、间距和对齐方式对图片或文字进行排版</p>
+							只能上传<i class="red">1M</i>一下的图片，复文本框中图片最佳效果为宽度<i class="red">890px</i>，可通过图片属性中宽度、高度、间距和对齐方式对图片或文字进行排版</p>
 							<div class="fl edit w630" style="height: 400px;margin-left:165px;">
 								<textarea id="content" th:field="*{content.content}"></textarea>
 							</div>
