--- a/admin/src/main/resources/templates/user/providerDetail.html
+++ b/admin/src/main/resources/templates/user/providerDetail.html
@@ -154,19 +154,19 @@
                     <div class="form-group">
                         <label class="control-label col-sm-2"> <span class="text-danger">*</span>企业营业执照上传： </label>
                         <div class="col-sm-8">
-                            <img ng-src="{{businessLicenseUrl}}" width="400" height="100" />
+                            <img src="{{item.businessLicenseUrl}}" width="400" height="100" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2"> <span class="text-danger">*</span>税务登记证上传： </label>
                         <div class="col-sm-8">
-                            <img ng-src="{{taxRegistrationUrl}}" width="400" height="100" />
+                            <img src="{{item.taxRegistrationUrl}}" width="400" height="100" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-2"> <span class="text-danger">*</span>组织结构代码证上传: </label>
                         <div class="col-sm-8">
-                            <img ng-src="{{structureCodeUrl}}" width="400" height="100" />
+                            <img src="{{item.structureCodeUrl}}" width="400" height="100" />
                         </div>
                     </div>
                 </div>
@@ -175,11 +175,5 @@
         <div class="modal-footer files_tab ">
             <button type="button" class="btn btn-primary" ng-click="authenticate(item)">
               	  通过审核
-            </button>
-        </div>
-        <div class="files_tab pos">
-            <button id="uploadImg" class="btn btn-success btn-xs">
-                  <input type="file" file-upload="batchProducts" data-id="{{item.id}}"/>
-                  <a href="#">导入商品</a>
             </button>
         </div>
