--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -44,7 +44,7 @@
             		<div class="form-group">
 	                    <label class="control-label col-sm-2"> 状态 </label>
 	                    <div class="col-sm-6">
-	                        <input class="form-control" disabled="true" ng-value="item.state|activeFilter" />
+	                        <input class="form-control" disabled="true" ng-value="item.state|productStateFilter" />
 	                    </div>
 	                </div>
 	                <div class="form-group">
@@ -56,7 +56,7 @@
 	                <div class="form-group">
 	                    <label class="control-label col-sm-2"> 上架日期 </label>
 	                    <div class="col-sm-6">
-	                        <input class="form-control" disabled="true" ng-value="item.authenticatedTime" />
+	                        <input class="form-control" disabled="true" ng-value="item.authenticatedTime|date:'yyyy-MM-dd HH:mm:ss'" />
 	                    </div>
 	                </div>
 	                <div class="form-group">
