--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -19,24 +19,40 @@
 			$(document).ajaxSend(function(e, xhr, options) {
 				xhr.setRequestHeader(header, token);
 			});
-			$(".tel-code").click(function(){
-				var code = $(this);
-				var phone = $("#phone");
+			var valiPhone = false;
+			$("#phone").change(function(){
 				$("#phoneError").empty();
-				if(phone.val()=="" || phone.val().length!=11){
+				valiPhone = false;
+				var phone = $(this);
+				if(phone.val() == "" || phone.val().length != 11){
 					phone.after('<i class="error" id="phoneError">请确认手机号码</i>');
 					return;
 				}
 				$.ajax({
-					type : 'POST',
+					type : 'post',
 					url : '/users/phone',
 					data : {'phone':phone.val()},
 					success : function(data){
-						if(data=='exists')
-							phone.after('<i class="error" id="phoneError">该手机已被注册</i>');
-						else if(data=='success'){
-							code.attr("disabled","disabled");
-							code.html("60秒后重发");
+						if(data=='true')
+							valiPhone = true;
+						else
+							phone.after('<i class="error" id="phoneError">该手机号码已被注册</i>');	
+					}
+				});
+			});
+			$(".tel-code").click(function(){
+				var code = $(this);
+				var phone = $("#phone");
+				if(valiPhone==false){
+					return;
+				}
+				code.attr("disabled","disabled");
+				code.html("60秒后重发");
+				$.ajax({
+					type : 'POST',
+					url : '/users/captcha',
+					data : {'phone':phone.val()},
+					success : function(data){
 							var time = 59;
 							var timer = setInterval(function(){
 								code.html(time + "秒后重发");
@@ -47,9 +63,6 @@
 									code.html("获取验证码");
 								}
 							},1000);
-
-						}else
-							phone.after('<i class="error" id="phoneError">请确认您的手机号码或您的次数已达上限</i>');
 					}
 				});
 			});
