--- a/web/src/main/resources/templates/product/review.html
+++ b/web/src/main/resources/templates/product/review.html
@@ -34,8 +34,7 @@
 	<div class="pagination">
 		<div class="l-pagination">
 			<ul>
-				<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}"
-					th:class="${i-1==viewpage.current}?active">
+				<li th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}" th:class="${i-1==viewpage.current}?active">
 					<a class="page" th:attr="url=${viewpage.href},page=__${i-1}__" th:text="${i}"></a>
 				</li>
 			</ul>
