--- a/web/src/main/resources/templates/user/forgetPw.html
+++ b/web/src/main/resources/templates/user/forgetPw.html
@@ -17,37 +17,50 @@
 			$(document).ajaxSend(function(e, xhr, options) {
 				xhr.setRequestHeader(header, token);
 			});
-			$(".tel-code").click(function(){
-				var code = $(this);
-				var phone = $("#phone");
+			var valiPhone = false;
+			$("#phone").change(function(){
 				$("#phoneError").empty();
-				if(phone.val()=="" || phone.val().length!=11){
+				valiPhone = false;
+				var phone = $(this);
+				if(phone.val() == "" || phone.val().length != 11){
 					phone.after('<i class="error" id="phoneError">请确认手机号码</i>');
 					return;
 				}
 				$.ajax({
-					type : 'POST',
-					url : '/forgetPws/phone',
+					type : 'post',
+					url : '/users/phone',
 					data : {'phone':phone.val()},
 					success : function(data){
-						if(data=='noexists')
-							phone.after('<i class="error" id="phoneError">该手机未被注册</i>');
-						else if(data=='success'){
-	    					code.attr("disabled","disabled");
-	    					code.html("60秒后重发");
-	    					var time = 59;
-	    					var timer = setInterval(function(){
-	    						code.html(time + "秒后重发");
-	    						time--; 
-	    						if(time == -1){
-	    							clearInterval(timer);
-	    							code.removeAttr("disabled");
-	    							code.html("获取验证码");
-	    						}
-	    					},1000);
-
-	    				}else
-	    					phone.after('<i class="error" id="phoneError">请确认您的手机号码或您的次数已达上限</i>');
+						if(data=='true')
+							phone.after('<i class="error" id="phoneError">该手机号码未注册</i>');	
+						else
+							valiPhone = true;
+					}
+				});
+			});
+			$(".tel-code").click(function(){
+				var code = $(this);
+				var phone = $("#phone");
+				if(valiPhone==false){
+					return;
+				}
+				code.attr("disabled","disabled");
+				code.html("60秒后重发");
+				$.ajax({
+					type : 'POST',
+					url : '/users/captcha',
+					data : {'phone':phone.val()},
+					success : function(data){
+							var time = 59;
+							var timer = setInterval(function(){
+								code.html(time + "秒后重发");
+								time--; 
+								if(time == -1){
+									clearInterval(timer);
+									code.removeAttr("disabled");
+									code.html("获取验证码");
+								}
+							},1000);
 					}
 				});
 			});
