--- a/web/src/main/resources/templates/user/changePw-result.html
+++ b/web/src/main/resources/templates/user/changePw-result.html
@@ -5,9 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
 <title>修改密码</title>
-<link rel="stylesheet" type="text/css" href="css/global.css"/>
+<link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
+<meta http-equiv="refresh" th:content="@{5;url=__${href}__}"/> 
 </head>
 <body>
 	<div class="resg-header">
@@ -42,8 +43,7 @@
 			<span>修改密码</span>
 		</div>
 		<div class="mb150">				
-			<h1 class="pw-point">密码修改成功！</h1>
-			<h1 class="pw-point pw-fail">密码修改失败！</h1>
+			<h1 class="pw-point">密码修改成功！5秒后返回个人中心，<a th:href="@{${href}}">立即返回</a></h1>
 		</div>
 	</div>
 	<div th:include="footer/footer"></div>
