--- a/admin/src/main/resources/templates/category/categoryAdd.html
+++ b/admin/src/main/resources/templates/category/categoryAdd.html
@@ -1,28 +1,29 @@
 <div class="modal-body">
-	<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
-		{{alert.msg}}
-	</alert>
-	<form class="form-horizontal" name="categoryForm" ng-submit="submit()">
-		<div class="form-group">
-			<label class="col-sm-3 control-label">一级分类label>
-			<div class="col-sm-5">
-				<select name="category" ng-model="item.parent" ng-required="true">
-					<option value="">--请选择--</option>
-					<option value="1">仪器</option>
-					<option value="2">试剂</option>
-					<option value="3">耗材</option>
-					<option value="4">服务</option>
-				</select>
-			</div>
-		</div>
-		<div class="form-group">
-			<label class="col-sm-3 control-label">二级分类</label>
-			<div class="col-sm-5">
-				<input type="text" class="form-control" ng-model="item.name" name="name" ng-required="true"/>
-			</div>
-		</div>
-		<div class="modal-footer">
-			<input type="submit" class="btn btn-primary" value="提交"/>
-		</div>
-	</form>
+    <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">
+        {{alert.msg}}
+    </alert>
+    <form class="form-horizontal" name="categoryForm" ng-submit="submit()">
+        <div class="form-group">
+            <label class="col-sm-3 control-label">一级分类</label>
+                <div class="col-sm-5">
+                    <select name="category" ng-model="item.parent" ng-required="true">
+                        <option value="">--请选择--</option>
+                        <option value="1">仪器</option>
+                        <option value="2">试剂</option>
+                        <option value="3">耗材</option>
+                        <option value="4">服务</option>
+                    </select>
+                </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-3 control-label">二级分类</label>
+            <div class="col-sm-5">
+                <input type="text" class="form-control" ng-model="item.name" name="name" ng-required="true" ng-maxlength="10" />
+                <span ng-show="categoryForm.name.$error.maxlength">超过最大长度</span>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <input type="submit" class="btn btn-primary" value="提交" />
+        </div>
+    </form>
 </div>
