--- a/admin/src/main/resources/templates/category/childCategoryAdd.html
+++ b/admin/src/main/resources/templates/category/childCategoryAdd.html
@@ -4,11 +4,12 @@
 	</alert>
 	<div class="modal-content">
 		<div class="modal-body">
-			<form class="form-horizontal" ng-submit="submit()">
+			<form class="form-horizontal" name="categoryForm" ng-submit="submit()">
 				<div class="form-group">
 					<label class="col-sm-3 control-label">名称</label>
 					<div class="col-sm-5">
-						<input type="text" class="form-control" ng-model="item.name" name="name" ng-required="true" />
+						<input type="text" class="form-control" ng-model="item.name" name="name" ng-required="true" ng-maxlength="10"/>
+						<span ng-show="categoryForm.name.$error.maxlength">超过最大长度</span>
 					</div>
 				</div>
 				<div class="modal-footer">
