--- a/admin/src/main/resources/templates/advertisement/createAdvertise.html
+++ b/admin/src/main/resources/templates/advertisement/createAdvertise.html
@@ -1,6 +1,6 @@
 <div class="contentpanel files_tab">
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
-    <form class="form-horizontal w400" ng-submit="submit()">
+    <form class="form-horizontal w400" name="advForm" ng-submit="submit()">
         <div class="row">
             <div class="form-group">
                 <label class="control-label col-sm-2">分类</label>
@@ -23,7 +23,8 @@
             <div class="form-group">
                 <label class="control-label col-sm-2">链接</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" ng-model="item.url" />
+                    <input type="text" class="form-control" name="url" ng-model="item.url" ng-maxlength="80" />
+                    <span ng-show="advForm.url.$error.maxlength">超过长度</span>
                 </div>
             </div>
         </div>
