--- a/admin/src/main/resources/templates/information/create.html
+++ b/admin/src/main/resources/templates/information/create.html
@@ -7,15 +7,17 @@
             <div class="form-group">
                 <label class="control-label col-sm-1">标题</label>
                 <div class="col-sm-3">
-                    <input type="text" class="form-control" name="title" ng-model="item.title" ng-required="true" />
+                    <input type="text" class="form-control" name="title" ng-model="item.title" ng-required="true" ng-maxlength="50" />
                     <span ng-show="infoForm.title.$error.required" class="error">请输入商品名称</span>
+                    <span ng-show="infoForm.title.$error.maxlength" class="error">长度应小于50</span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-1">摘要</label>
                 <div class="col-sm-11">
-                    <input type="text" class="form-control" name="summary" ng-model="item.summary"  />
-                    <span ng-show="infoForm.title.$error.required" class="error">请输入摘要</span>
+                    <input type="text" class="form-control" name="summary" ng-model="item.summary" ng-maxlength="100" />
+                    <span ng-show="infoForm.summary.$error.required" class="error">请输入摘要</span>
+                    <span ng-show="infoForm.summary.$error.maxlength" class="error">长度应小于100</span>
                 </div>
             </div>
             <div class="form-group">
@@ -35,7 +37,7 @@
             </div>
         </div>
         <div class="panel-footer">
-        	<input type="submit" ng-disabled="disabled" class="btn btn-primary col-xs-offset-4" value="提交"/>
+            <input type="submit" ng-disabled="disabled" class="btn btn-primary col-xs-offset-4" value="提交" />
         </div>
     </form>
 </div>
