--- a/admin/src/main/resources/templates/category/category.html
+++ b/admin/src/main/resources/templates/category/category.html
@@ -6,7 +6,7 @@
 			</div>
 		</form>
 		<h4>仪器</h4>
-		<table class="table table-bordered">
+		<table class="table table-bordered sm-ml">
 			<thead>
 				<tr>
 					<th>序号</th>
@@ -28,7 +28,8 @@
 					</button>
 					<button type="button" class="btn btn-default btn-sm" ng-click="delete(item)">
 						{{item.activate|reverseActiveFilter}}
-					</button><a href="#/{{item.id}}/categories" class="btn btn-primary btn-sm">查看</a></td>
+					</button>
+					<a href="#/{{item.id}}/categories" class="btn btn-primary btn-sm">查看</a></td>
 				</tr>
 			</tbody>
 		</table>
