--- a/admin/src/main/resources/templates/brand/brandDetail.html
+++ b/admin/src/main/resources/templates/brand/brandDetail.html
@@ -6,7 +6,7 @@
                 <label class="control-label col-sm-2">标题</label>
                 <div class="col-sm-6">
                     <input class="form-control" name="title" ng-model="item.title" ng-required="true" />
-                    <span ng-show="brandForm.title.$error.required">请输入标题</span>
+                    <span ng-show="brandForm.title.$error.required" class="text-danger">请输入标题</span>
                 </div>
             </div>
             <div class="form-group lhg">
