--- a/admin/src/main/resources/templates/information/create.html
+++ b/admin/src/main/resources/templates/information/create.html
@@ -8,14 +8,14 @@
                 <label class="control-label col-sm-1">标题</label>
                 <div class="col-sm-3">
                     <input type="text" class="form-control" name="title" ng-model="item.title" ng-required="true" />
-                    <span ng-show="infoForm.title.$error.required" class="error">请输入商品名称</span>
+                    <span ng-show="infoForm.title.$error.required" class="text-danger">请输入商品名称</span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-1">摘要</label>
                 <div class="col-sm-11">
                     <input type="text" class="form-control" name="summary" ng-model="item.summary"  />
-                    <span ng-show="infoForm.title.$error.required" class="error">请输入摘要</span>
+                    <span ng-show="infoForm.title.$error.required" class="text-danger">请输入摘要</span>
                 </div>
             </div>
             <div class="form-group">
@@ -23,14 +23,14 @@
                 <div class="col-sm-3">
                     <select ng-model="item.category" name="category" ng-options="c.id as c.name for c in categories" class="form-control" ng-required="true">
                     </select>
-                    <span ng-show="infoForm.category.$error.required" class="error">请输入商品分类</span>
+                    <span ng-show="infoForm.category.$error.required" class="text-danger">请输入商品分类</span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-1">内容</label>
                 <div class="col-sm-10">
                     <textarea name="content" ckeditor="editorOptions" ng-model="item.content" ng-required="true"></textarea>
-                    <span ng-show="infoForm.content.$error.required" class="error">请输入内容</span>
+                    <span ng-show="infoForm.content.$error.required" class="text-danger">请输入内容</span>
                 </div>
             </div>
         </div>
