--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -3,13 +3,13 @@
 		<div class="row">
 			<div class="form-group">
 				<label class="control-label col-sm-1">标题</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control col-sm-5" ng-model="item.title" />
+				<div class="col-sm-6">
+					<input type="text" class="form-control" ng-model="item.title" />
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="control-label col-sm-1">摘要</label>
-				<div class="col-sm-11">
+				<div class="col-sm-6">
                     <input type="text" class="form-control" name="summary" ng-model="item.summary"  />
 				</div>
 			</div>
@@ -21,7 +21,7 @@
 			</div>
             <div class="form-group lhg">
                 <label class="control-label col-sm-1">图片</label>
-                <div class="col-sm-2">
+                <div class="col-sm-1">
                     <img ng-src="{{item.cover}}" width="100" height="100" />
                 </div>
                 <div class="col-sm-6">
