--- a/web/src/main/resources/templates/user/provider/changePassword.html
+++ b/web/src/main/resources/templates/user/provider/changePassword.html
@@ -30,8 +30,8 @@
 			</div>
 			<div class="mainwrapper clearfix">
 				<div class="aside fl">
-					<a class="active">个人资料</a> <a href="/provider/products?form" target="_blank">发布商品</a>
-					<a href="/provider/products/ALL">商品维护</a> <a href="/provider/count">商品信息统计</a>
+					<a class="active">个人资料</a> <a th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER" href="/provider/products?form" target="_blank">发布商品</a>
+					<a href="/provider/products/ALL" th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">商品维护</a> <a href="/provider/count" th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">商品信息统计</a>
 				</div>
 				<div class="mainpanel fr">
 					<div class="tabs-nav info-tabs bodr">
