--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -122,7 +122,7 @@
 		$("#review").click(function(){
 			var productId = $(this).attr("data-id");
 			var reviews = $("#reviews"); 
-			if(reviews.html()==""){
+			if(reviews.html().trim()==""){
 			$(".fixed").fadeIn();
 			$("#gif").fadeIn();
 				$.ajax({
@@ -140,11 +140,22 @@
 		$("#subject").click(function(){
 			var productId = $(this).attr("data-id");
 			var subjects = $("#subjects");
-			console.log(subjects.html());
 			if(subjects.html().trim()==""){
 				$(".fixed").fadeIn();
 				$("#gif").fadeIn();
 				$.ajax({
+					url : "/products/"+productId+"/subjects",
+					type : "get",
+					success : function(data){
+						var str = "";
+						$.each(data,function(key,val){
+							str = str + '<li><a href="/subjects/'+val.id+'" target="_blank"><div class="title ft16 text210">'+val.name+'</div>'
+							+ '<div class="spe-pic"><img src="'+val.cover+'" width="210" height="175" /></div><div class="topic-detail">'+val.summary+'</div></a></li>';
+						});
+						subjects.append(str);
+						$(".fixed").fadeOut();
+						$("#gif").fadeOut();
+					}
 				});
 			}
 		});
@@ -250,7 +261,7 @@
 	<div th:include="footer/footer"></div>
 	<script></script>
 	<div class="fixed"></div>
-	<div class="hide-wrap" style="background: transparent;padding-left:8%; width: 50px; height: 50px;" id = "gif"><img style="width: 50px; height: 50px;" alt="" th:src="@{/img/loading.gif}"/></div>
+	<div class="gif" id = "gif"><img alt="" th:src="@{/img/loading.gif}"/></div>
 	<div class="hide-wrap logo-small bodr"></div>
 	<div class="prompt"></div>
 </body>
